# weather-platform

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
helm/prediction-api/: Chart.yaml  values.yaml
helm/prediction-api/templates/: deployment.yaml  ingress.yaml  service.yaml
k8s/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
src/prediction_api/: config.py  main.py
src/prediction_api/models/: schemas.py
src/prediction_api/routers/: health.py
